<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Activities.catalogueActivities.CatalogueItemViewActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-316dp">

        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="106dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/itsh_logo" />

        <TextView
            android:id="@+id/userIdLabelTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/userid"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

        <TextView
            android:id="@+id/userIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

        <TextView
            android:id="@+id/userAdminTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/admin"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userIdLabelTextView" />

        <CheckBox
            android:id="@+id/userAdminCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/colorWhite"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/userIdTextView" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/name"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userAdminTextView" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/userAdminCheckBox" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/e_mail"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

        <TextView
            android:id="@+id/adminUpdateSiteTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/enter_site"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmailTextView" />

        <Spinner
            android:id="@+id/adminUpdateSiteSpinner"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorWhite"
            android:entries="@array/site_id"
            android:popupBackground="@color/colorBlack"
            android:prompt="@string/site_prompt"
            android:text="@string/choose_a_site"
            android:theme="@style/spinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/userEmailEditText" />

        <TextView
            android:id="@+id/userActiveTextView"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/active"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminUpdateSiteTextView" />

        <CheckBox
            android:id="@+id/userActiveCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:buttonTint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/adminUpdateSiteSpinner" />

        <Button
            android:id="@+id/adminUpdateButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/update"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userActiveTextView" />

        <Button
            android:id="@+id/adminUserDeleteButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/delete"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/userActiveCheckBox" />

        <Button
            android:id="@+id/cancelSelectedUserActivity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminUpdateButton" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>