<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.homeActivities.HomeActivity"
    android:background="@drawable/gradient_bg">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="106dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/itsh_logo" />

        <TextView
            android:id="@+id/updateNameTextView"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/your_current_name"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

        <EditText
            android:id="@+id/updateNameEditText"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:inputType=""
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

        <TextView
            android:id="@+id/updateEmailTextView"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/your_current_e_mail"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateNameTextView" />

        <EditText
            android:id="@+id/updateEmailEditText"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/updateNameEditText" />

        <TextView
            android:id="@+id/updatePasswordTextView"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/enter_new_password"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateEmailTextView" />

        <EditText
            android:id="@+id/updatePasswordEditText"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/updateEmailEditText" />

        <TextView
            android:id="@+id/updatePasswordAgainTextView"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/password_again"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordTextView" />

        <EditText
            android:id="@+id/updatePasswordAgainEditText"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordEditText" />

        <TextView
            android:id="@+id/updateSiteTextView"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@string/enter_site"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:gravity="center_vertical|end"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordAgainTextView" />

        <Spinner
            android:id="@+id/updateSiteSpinner"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorWhite"
            android:entries="@array/site_id"
            android:popupBackground="@color/colorBlack"
            android:prompt="@string/site_prompt"
            android:text="@string/choose_a_site"
            android:theme="@style/spinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/updatePasswordAgainEditText" />

        <Button
            android:id="@+id/updateButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/updateSiteSpinner" />

        <Button
            android:id="@+id/cancelUpdateButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateSiteSpinner" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>